--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "news",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://BardAlexandrovskiy.github.io/news",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,7 @@
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
+    "gh-pages": "^2.1.1",
     "prettier": "^1.18.2"
   }
 }
