--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         1,
         "prefer-double"
       ],
-      "react/jsx-filename-extension": 0
+      "react/jsx-filename-extension": 0,
+      "react/prop-types": 2
     },
     "plugins": [
       "prettier"
